# klein-auto-research

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: klein-consultant.md  klein-data-auditor.md  klein-experimenter.md  klein-method-scholar.md  klein-sweeper.md  klein-synthesist.md  klein-tutor.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
datasets/insurance-claims/: DATA_LICENSE  README.md
kleinlib/: __init__.py  data.py  encoders.py  eval.py  figures.py  keep_awake.py  profile_fallback.py  schema.py  snapshot.py  sweep.py  torch_device.py  torch_loop.py
kleinlib/tests/: test_aux_idempotency.py  test_data_hub_resolution.py  test_encoders.py  test_eval_guard.py  test_evaluate_scalar.py  test_figures_smoke.py  test_profile_fallback.py  test_schema_roundtrip.py  test_snapshot.py  test_sweep.py  test_torch_loop.py
knowledge/: README.md  best-practices-auto-insurance.md  encoder-comparison.md  gbdt-hyperparameter-guide.md  insights-and-framework.md
knowledge/method_cards/: README.md  dae-tabular.md  gbdt-tabular.md  glm-pricing.md  quantile-least-squares.md
scripts/: README.md  verify_e2e.sh
studies/00-glm-claims-quickstart/: README.md  aux_metrics.tsv  data_card.md  findings.md  method_card.md  prepare.py  program.md  research_plan.md  results.tsv  results_summary.md  study.yaml  train.py
studies/01-dae-claims/: README.md  aux_metrics.tsv  dae.py  data_card.md  figures_extra.py  findings.md  method_card.md  prepare.py  program.md  research_plan.md  results.tsv  (+3 more)
(+84 files in other folders)
