[project]
name = "klein-auto-research"
version = "0.1.0"
description = "Klein Auto Research — an agentic, visualization-first ML research framework for actuaries and data scientists"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Xiang Shan" }]
requires-python = ">=3.11"
keywords = ["machine-learning", "actuarial-science", "research-framework", "ai-agents", "agentic", "claude-code"]
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "scipy>=1.13",
    "pyyaml>=6",
    "joblib>=1.4",
    "category-encoders>=2.8",
]

[project.urls]
Repository = "https://github.com/Xiang-Shan/klein-auto-research"
Issues = "https://github.com/Xiang-Shan/klein-auto-research/issues"

[project.optional-dependencies]
gbdt = [
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
]
deep = [
    "torch>=2.3",
]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kleinlib"]
